<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LibVision</string>
    <string name="logo_description">LibVision logo</string>

    <!-- Updated string values for email -->
    <string name="university_email">University Email</string>
    <string name="plm_email_example">jdelacruz20XX@plm.edu.ph</string>

    <string name="password_hint">Password</string>
    <string name="password_hint_text">Enter Password</string>
    <string name="login_text">Login</string>
    <string name="or_text">OR</string>
    <string name="guest_button">Guest</string>
    <string name="sign_up_text">Don\'t have an account yet? Sign up</string>
    <string name="slogan_text">Find the books you are looking for</string>
    <string name="back_button">Back Button</string>
    <string name="details_text">Enter your details</string>
    <string name="full_name">Full Name</string>
    <string name="role">Role</string>
    <string name="faculty_text">Faculty</string>
    <string name="student_text">Student</string>
    <string name="full_name_hint">Enter your name</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_a_password">Create a password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_reminder">Password must contain at least 8 characters, including one uppercase letter, one lowercase letter, one number, and one special character (e.g., @, #, $, etc.).</string>
    <string name="create_account">Create Account</string>
    <string name="back_arrow">back_arrow</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="login_button_description">Log in to your account</string>
    <string name="school_id_hint">202XXXXX</string>
    <string name="school_idText">School ID Number</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="dashboard">Dashboard</string>
    <string name="book_catalog">Book Catalog</string>
    <string name="search_bar_hint">Search for title</string>
    <string name="search_bar_icon">Search Icon\n</string>
    <string name="logout_confirmation">If you choose to log out, you will no longer have access to our current features and sessions.</string>
    <string name="Logout_Pop_up_Question">Are you sure you want to log out?</string>
    <string name="book_counter">Book Counter</string>
    <string name="feedback">Feedback</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="book_counter_page">Book Counter</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="camera_text_description" />
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_slide">Image Slide</string>
    <string name="about_us">About Us</string>
    <string name="welcome_to_libvision">Welcome to LibVision!</string>
    <string name="book_catalog_page_text">Book Catalog</string>
    <string name="circulation_section">Circulation Section</string>
    <string name="periodicals_section">Periodicals Section</string>
    <string name="graduate_school_library">Graduate School Library</string>
    <string name="liliosa_hilao_gender_and_development_corner">Liliosa Hilao Gender and Development Corner</string>
    <string name="law_library">Law Library</string>
    <string name="health_sciences_library">Health Sciences Library</string>
    <string name="medical_library">Medical Library</string>
    <string name="reference_section">Reference Section</string>
    <string name="title_activity_circulation_section_scrolling">
        CirculationSectionScrollingActivity
    </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="librarian">librarian</string>
    <string name="title_activity_circulation_scrolling">CirculationScrollingActivity</string>
    <string name="title_activity_periodicals_section_scrolling">
        PeriodicalsSectionScrollingActivity
    </string>
    <string name="filipiniana_section">Filipiniana Section</string>
    <string name="filipiniana_section_text">Filipiniana Section</string>
    <string name="circulation_section_text">Circulation Section</string>
    <string name="title_activity_helath_sciences_scrolling">HelathSciencesScrollingActivity</string>
    <string name="title_activity_law_library_scrolling">LawLibraryScrollingActivity</string>
    <string name="title_activity_reference_section_scrolling">ReferenceSectionScrollingActivity
    </string>
    <string name="title_activity_health_science_scrolling">HealthScienceScrollingActivity</string>
    <string name="title_activity_medical_library_scrolling">MedicalLibraryScrollingActivity</string>
</resources>
