<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F3EF"
    android:orientation="vertical"
    android:id="@+id/main"
    tools:ignore="ExtraText">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <!-- Image of Bookshelf -->
    <ImageView
        android:id="@+id/imageview"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="Bookshelf Image"
        android:src="@drawable/libraryshelf"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteY="50dp"
        />

    <!-- Slogan -->
    <TextView
        android:id="@+id/slogan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/slogan_text"
        android:textAllCaps="true"
        android:textColor="#262932"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/imageview" />

    <!-- Login Title -->
    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textColor="#262932"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="35dp"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@id/slogan_text"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        />

    <!-- University Email -->
    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textColor="#262932"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        />

    <!-- University Email Input -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:hint="@string/plm_email_example"
        android:importantForAutofill="no"
        android:textColor="#262932"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="16sp"
        android:background="@drawable/rounded_corners"
        android:inputType="textEmailAddress"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/emailText"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        />

    <!-- Password Text -->
    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_hint"
        android:textColor="#262932"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        />

    <FrameLayout
        android:id="@+id/passwordFrameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginTop="5dp">

        <!-- Password Input -->
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/password_hint_text"
            android:importantForAutofill="no"
            android:textColor="#262932"
            android:textSize="16sp"
            android:background="@drawable/rounded_corners"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingEnd="50dp"
            android:paddingStart="20dp"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintEnd_toStartOf="@+id/togglePasswordVisibility"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        />

        <!-- Eye Icon to Toggle Password Visibility -->
        <ImageView
            android:id="@+id/togglePasswordVisibility"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/eye_closed"
            android:contentDescription="@string/toggle_password_visibility"
            android:layout_gravity="end|center_vertical"
            android:padding="5dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"/>
    </FrameLayout>



    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="267dp"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/dark_blue"
        android:contentDescription="@string/login_button_description"
        android:text="@string/login_text"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/passwordFrameLayout"
        />

<!--    &lt;!&ndash; Separator &ndash;&gt;-->
<!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="245dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/or_text"-->
<!--        android:layout_gravity="center"-->
<!--        android:gravity="center"-->
<!--        android:textColor="#262932"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/loginButton"-->
<!--        />-->

<!--    &lt;!&ndash; Guest Button &ndash;&gt;-->
<!--    <android.widget.Button-->
<!--        android:id="@+id/guestButton"-->
<!--        android:layout_width="267dp"-->
<!--        android:layout_height="53dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:background="@drawable/button_outline"-->
<!--        android:text="@string/guest_button"-->
<!--        android:textColor="@color/dark_blue"-->
<!--        android:textAllCaps="false"-->
<!--        app:layout_constraintEnd_toEndOf="@id/guidelineRight"-->
<!--        app:layout_constraintStart_toStartOf="@id/guidelineLeft"-->
<!--        app:layout_constraintTop_toBottomOf="@id/textView" />-->

    <!-- Sign-up Link -->
    <TextView
        android:id="@+id/signUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sign_up_text"
        android:textColor="#0E69FF"
        android:layout_gravity="center"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
